--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td>  <img src="https://github.com/roisasson1/portfolio/blob/main/images/1637756793439-modified.png"  /></td>
+      <td>  <img src="https://github.com/roisasson1/portfolio/blob/main/images/1637756793439-modified.png?raw=true"  /></td>
       <td><h1>Roi Sasson</h1>
         <p> <!-- paragraph-->
           <em>Computer Science student and Software Developer</em>
