--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td>  <img src="https://github.com/roisasson1/portfolio/blob/main/images/1637756793439-modified.png?raw=true"  /></td>
+      <td>  <img src="https://media-exp1.licdn.com/dms/image/D4D03AQEiVSfv7hWLIg/profile-displayphoto-shrink_800_800/0/1637756793439?e=1670457600&v=beta&t=QOY6VXNRihNKKPA68Fb1zDGB2T1ilxYLjDm4J7S_snk"  /></td>
       <td><h1>Roi Sasson</h1>
         <p> <!-- paragraph-->
           <em>Computer Science student and Software Developer</em>
